--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
 
+  # Animation
+  flutter_spinkit: ^5.1.0
+
+  # Google
+  url_launcher: ^6.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
